app/assets/stylesheets/code_line_numbering.css
pre {
    counter-reset: line-numbering;
    border: solid 1px #d9d9d9;
    border-radius: 0;
    background: #fff;
    padding: 0;
    line-height: 23px;
    margin-bottom: 30px;
    white-space: pre;
    overflow-x: auto;
    word-break: inherit;
    word-wrap: inherit;
}

pre a::before {
    content: counter(line-numbering);
    counter-increment: line-numbering;
    padding-right: 1em; /* space after numbers */
    width: 25px;
    text-align: right;
    opacity: 0.7;
    display: inline-block;
    color: #aaa;
    background: #eee;
    margin-right: 16px;
    padding: 2px 10px;
    font-size: 13px;
    border-right: 1px solid #dedede;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

pre a:first-of-type::before {
    padding-top: 10px;
    -webkit-box-shadow: 0px 1px 1px inset rgba(255, 255, 255, 0.9);
    -moz-box-shadow: 0px 1px 1px inset rgba(255, 255, 255, 0.9);
    box-shadow: 0px 1px 1px inset rgba(255, 255, 255, 0.9);
}

pre a:last-of-type::before {
    padding-bottom: 10px;
}

pre a:only-of-type::before {
    padding: 10px;
}

